<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.centicbids.viewmodel.ItemDetailViewModel" />
    </data>

    <!--    <ScrollView-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="match_parent">-->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_grey"
        tools:context=".ui.ItemDetailsActivity">

        <com.synnapps.carouselview.CarouselView
            android:id="@+id/carousel_item_detail_images"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_card_height"
            app:fillColor="#FFFFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:pageColor="#00000000"
            app:radius="6dp"
            app:slideInterval="3000"
            app:strokeColor="#FF777777"
            app:strokeWidth="1dp">


        </com.synnapps.carouselview.CarouselView>

        <TextView
            android:id="@+id/txt_item_detail_name"
            style="@style/textViewBlack.Bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:ellipsize="end"
            android:maxLines="3"
            android:text="@{viewModel.item.title}"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/carousel_item_detail_images" />

        <TextView
            android:id="@+id/txt_item_detail_description"
            style="@style/textViewBlack"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@{viewModel.item.description}"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_item_detail_name" />

        <TextView
            android:id="@+id/textView6"
            style="@style/textViewBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:text="@string/txt_base_price"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_item_detail_description" />

        <TextView
            android:id="@+id/txt_item_detail_base_price"
            style="@style/textViewBlack.Bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:maxLines="1"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            app:doubleToString="@{viewModel.item.basePrice}"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView6"
            app:layout_constraintTop_toBottomOf="@+id/txt_item_detail_description" />

        <TextView
            android:id="@+id/textView8"
            style="@style/textViewBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:text="@string/txt_highest_bid"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <TextView
            android:id="@+id/txt_item_detail_highest_bid"
            style="@style/textViewBlack.Bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            app:doubleToString="@{viewModel.item.highestBid}"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView8"
            app:layout_constraintTop_toBottomOf="@+id/txt_item_detail_base_price" />

        <TextView
            android:id="@+id/textView11"
            style="@style/textViewBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:text="@string/txt_expires_in"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <TextView
            android:id="@+id/txt_item_detail_expiry_date"
            style="@style/textViewBlack.Bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:text="TextView"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView11"
            app:layout_constraintTop_toBottomOf="@+id/txt_item_detail_highest_bid" />

        <Button
            android:id="@+id/btn_item_detail_place_bid"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:text="@string/txt_place_bid"
            android:textColor="@color/white"
            android:onClick="onPlaceBidClicked"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <View
            android:id="@+id/view"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/btn_item_detail_place_bid"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_item_detail_expiry_date" />

        <ProgressBar
            android:id="@+id/progressBar2"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="@{viewModel.progressBarVisibility}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView11"
            app:layout_constraintTop_toTopOf="@+id/carousel_item_detail_images" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!--    </ScrollView> -->
</layout>
